--- a/src/css/SanPham.css
+++ b/src/css/SanPham.css
@@ -51,16 +51,17 @@
     -fx-letter-spacing: 5px;
 }
 
-.button{
-    -fx-text-fill: #FFD95A;
-    -fx-background-radius: 10;
-    -fx-background-color: #fff;
-    -fx-border-color: #FFD95A;
-    -fx-border-radius: 10;
-    -fx-border-width: 1.5;
-    -fx-font-size: 18px;
 
-}
+/*.button{*/
+/*    -fx-text-fill: #FFD95A;*/
+/*    -fx-background-radius: 10;*/
+/*    -fx-background-color: #fff;*/
+/*    -fx-border-color: #FFD95A;*/
+/*    -fx-border-radius: 10;*/
+/*    -fx-border-width: 1.5;*/
+/*    -fx-font-size: 18px;*/
+
+/*}*/
 
 .search-btn{
     -fx-border-width: 0 0 1.3 0;
@@ -78,6 +79,9 @@
     -fx-font-size: 15;
 }
 
+#vbThongTinSanPham .text-field, .button{
+    -fx-background-radius: 5;
+}
 /*.root{*/
 /*    -fx-background-radius: 0 0 30 30;*/
 /*    !*-fx-background-color: #fff;*!*/
