--- a/src/View/SanPham.fxml
+++ b/src/View/SanPham.fxml
@@ -43,14 +43,14 @@
                         <Insets left="5.0" />
                      </VBox.margin>
                   </HBox>
-                  <TableView maxHeight="-Infinity" prefHeight="646.0" prefWidth="847.0" styleClass="box-radius" stylesheets="@../css/SanPham.css">
+                  <TableView fx:id="tblDSSP" maxHeight="-Infinity" prefHeight="646.0" prefWidth="847.0" styleClass="box-radius" stylesheets="@../css/SanPham.css">
                     <columns>
-                      <TableColumn prefWidth="50.0" resizable="false" text="Mã SP" />
-                      <TableColumn prefWidth="400.0" resizable="false" text="Tên SP" />
-                        <TableColumn prefWidth="70.0" resizable="false" text="Số lượng" />
-                        <TableColumn prefWidth="130.0" resizable="false" text="Đơn giá" />
-                        <TableColumn prefWidth="90.0" resizable="false" text="Mã loại" />
-                        <TableColumn prefWidth="90.0" text="IMG" />
+                      <TableColumn fx:id="tcMaSP" prefWidth="50.0" resizable="false" text="Mã SP" />
+                      <TableColumn fx:id="tcTenSP" prefWidth="400.0" resizable="false" text="Tên SP" />
+                        <TableColumn fx:id="tcSoLuong" prefWidth="70.0" resizable="false" text="Số lượng" />
+                        <TableColumn fx:id="tcDonGia" prefWidth="130.0" resizable="false" text="Đơn giá" />
+                        <TableColumn fx:id="tcMaLoai" prefWidth="90.0" resizable="false" text="Mã loại" />
+                        <TableColumn fx:id="tcIMG" prefWidth="90.0" text="IMG" />
                     </columns>
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
